[WWW-70] Changes: - Added new methods to GameEntityService, GameEntityServiceImpl, GAmeServiceImpl, GameService, Round - Added new Test for Round